2006-10-23  Dirk Göttel <dgoettel@freenet.de>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems
	* data/libiptcdata.ebuild:
        Added ebuild file for gentoo systems

2006-10-23  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.2


##############################################################################
#                                   1.2.1                                    #
##############################################################################

2006-10-16  Piotr Eljasiak  <epiotr@use.pl>

	* data/gnome-commander.desktop.in.in:
	Fixed bug #333898 (deprecated icon suffix in desktop file)

2006-10-15  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2006-10-10  Piotr Eljasiak  <epiotr@use.pl>

	* plugins/cvs/cvs-plugin.c:
	* plugins/fileroller/file-roller-plugin.c:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-prepare-xfer-dialog.c:
	* src/gnome-cmd-search-dialog.c:
	Reaplacing obsoleted g_dirname() with g_path_get_dirname()

2006-10-08  Assaf Gordon  <agordon88@gmail.com>

	* src/libgbiewer/viewer-window.c:
	* src/libgviewer/bm_byte.{c.h}:
	* src/libgviewer/bm_chartype.{c,h}:
	* src/libgviewer/cp437.{c,h}:
	* src/libgviewer/input_mode.c:
	* src/libgviewer/libgviewer.h:
	* src/libgviewer/Makefile.am:
	* src/libgviewer/search-dlg.{c,h}:
	* src/libgviewer/searcher.{c,h}:
	* src/libgviewer/search-progress-dlg.{c,h}:
	* src/libgviewer/text-render.{c,h}:
	* src/libgviewer/viewer-utils.{c,h}:
	* src/libgviewer/viewer-widget.{c,h}:
	* tests/gviewer/Makefile.am:
	* tests/gviewer/bm_byte_test.c:
	* tests/gviewer/bm_chartype_test.c:
	* tests/gviewer/utils_test.c:
	Added "Find" feature to the internal viewer

2006-10-07  vlad <b100dian@gmail.com>
  
	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-rename-dialog.c:
	* src/gnome-cmd-rename-dialog.h:
	Added in-place rename (SHIFT+F6)

2006-10-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c: